--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.8.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
