--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^12.0.0",
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "element-plus": "^2.8.8",
